<resources>
    <string name="app_name">Daily Planning</string>
    <string name="tasks">T A S K S</string>
    <string name="start">Tap on a date to add a new task or just swipe down TASKS to review a task-list for today</string>
    <string name="tasksForToday">Tasks  for  today:</string>
    <string name="nothing">No required tasks for today!</string>
    <string name="select_time">Select time</string>
    <string name="placeholderNewTask">A new task..</string>
    <string name="tmp_date">8:20 Tuesday Oct 10</string>
    <string name="saveButton">SAVE</string>
    <string name="remind_tomorrow">REMIND  TOMORROW</string>
    <string name="add_button">+</string>
</resources>
