<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.CreatingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/sansation"
            android:gravity="center_vertical|center"
            android:lineSpacingExtra="30sp"
            android:text="@string/tmp_date"
            android:textColor="@color/fontGrey"
            android:textSize="11pt" />

        <EditText
            android:id="@+id/editNewTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:background="@drawable/newtask"
            android:fontFamily="@font/sansation"
            android:textAlignment="center"
            android:hint="@string/placeholderNewTask"
            android:textColorHint="@color/fontLightGrey"
            android:textColor="@color/fontWhite"
            android:textSize="18sp"
            android:padding="15dp"
            android:maxLength="100"
            android:inputType="textCapSentences|textMultiLine"
            android:imeOptions="actionGo"/>

        <Button
            android:id="@+id/buttonSelectTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blue"
            android:fontFamily="@font/sansation"
            android:onClick="onClickSelectTime"
            android:text="@string/select_time"
            android:textColor="@color/fontWhite"
            android:textSize="14sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_green"
            android:fontFamily="@font/sansation"
            android:textColor="@color/fontWhite"
            android:text="@string/saveButton"
            android:textSize="14sp"
            android:onClick="onClickSave"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>