<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/topLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightBlue"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTasksForToday"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/sansation"
                    android:gravity="center_vertical|center"
                    android:text="@string/tasksForToday"
                    android:textColor="@color/fontWhite"
                    android:textSize="11pt" />

                <ScrollView
                    android:id="@+id/scrollViewToDoList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:overScrollMode="never">

                    <LinearLayout
                        android:id="@+id/toDoLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />
                </ScrollView>

                <TextView
                    android:id="@+id/textViewNothing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/oswald"
                    android:gravity="center_vertical|center"
                    android:text="@string/nothing"
                    android:textColor="@color/fontWhite"
                    android:textSize="8pt"
                    android:visibility="invisible" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewTasks"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/header_corner"
                android:fontFamily="@font/oswald"
                android:gravity="center_vertical|center"
                android:text="@string/tasks"
                android:textColor="@color/fontWhite"
                android:textSize="11pt" />

            <FrameLayout
                android:id="@+id/bottomLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightRed">

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/sansation"
                    android:gravity="center_vertical|center"
                    android:text="@string/tmp_date"
                    android:textColor="@color/fontGrey"
                    android:textSize="11pt" />

                <ScrollView
                    android:id="@+id/scrollView"
                    android:layout_width="match_parent"
                    android:layout_height="472dp"
                    android:layout_marginTop="70dp"
                    android:overScrollMode="never">

                    <LinearLayout
                        android:id="@+id/scrollLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"/>
                </ScrollView>

                <Button
                    android:id="@+id/buttonAddNewTask"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:layout_gravity="top|center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_add"
                    android:fontFamily="@font/oswald"
                    android:onClick="onClickAddNewTask"
                    android:text="@string/add_button"
                    android:textColor="@color/fontWhite"
                    android:textSize="23pt"
                    android:visibility="invisible"
                    tools:layout_editor_absoluteX="155dp" />

                <TextView
                    android:id="@+id/textViewStart"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="200dp"
                    android:background="@color/backgroundLightGrey"
                    android:fontFamily="@font/oswald"
                    android:gravity="center_vertical|center"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:text="@string/start"
                    android:textColor="@color/fontWhite"
                    android:textSize="8pt"
                    android:visibility="visible" />

            </FrameLayout>

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:background="@drawable/button_green"
                android:fontFamily="@font/sansation"
                android:onClick="onClickSave"
                android:text="@string/saveButton"
                android:textColor="@color/fontWhite"
                android:textSize="14sp"
                android:visibility="visible" />


        </LinearLayout>

    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</android.support.constraint.ConstraintLayout>











